Archive2/b0/2f8bff1fd7f83d/output
main.cpp: In function 'void nil()':
main.cpp:2:13: error: 'zzz' was not declared in this scope
 void nil() {zzz}
             ^
